--- a/theme.toml
+++ b/theme.toml
@@ -1,12 +1,11 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "PaperMod"
+name = "Papermod"
 license = "MIT"
 licenselink = "https://github.com/adityatelange/hugo-PaperMod/blob/master/LICENSE"
-description = "A fast, clean, responsive Hugo theme"
-homepage = "https://adityatelange.github.io/hugo-PaperMod/"
-demosite = "https://adityatelange.github.io/hugo-PaperMod/"
+description = "Ariel Berdah Full Stack Developer, blog, news, learning."
+homepage = "https://arielberdah.com/"
 tags = [
   "responsive",
   "simple",
@@ -41,8 +40,8 @@ features = [
 min_version = "0.146.0"
 
 [author]
-  name = "Aditya Telange"
-  homepage = "https://github.com/adityatelange/"
+  name = "Ariel Berdah"
+  homepage = "https://arielberdah.com/"
 
 # If porting an existing theme
 [original]
